# tauri-playground

./: LICENSE  README.md  package-lock.json
adv-async-commands/: index.html  package-lock.json  package.json
adv-async-commands/src/: bindings.ts  main.ts  styles.css
adv-async-commands/src-tauri/: Cargo.toml  tauri.conf.json
adv-async-commands/src-tauri/src/: lib.rs  main.rs
deep-link-desktop/: README.md  index.html  package-lock.json  package.json
deep-link-desktop/src/: App.tsx
deep-link-desktop/src-tauri/: Cargo.toml  tauri.conf.json
deep-link-desktop/src-tauri/capabilities/: default.json
deep-link-desktop/src-tauri/src/: lib.rs  main.rs
filesystem-apis/: package-lock.json  package.json
filesystem-apis/src/: App.tsx
filesystem-apis/src-tauri/: Cargo.toml  tauri.conf.json
filesystem-apis/src-tauri/src/: main.rs
local-first-data/: package-lock.json  package.json
local-first-data/src/: App.css  App.jsx  main.jsx
local-first-data/src-tauri/: Cargo.toml  tauri.conf.json
mobile/: package-lock.json  package.json
mobile/src/: App.css  App.tsx  main.tsx
mobile/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: lib.rs  main.rs
multiwebview/: package-lock.json  package.json
multiwebview/src/: index1.html  index2.html  index3.html  index4.html
multiwebview/src-tauri/: Cargo.toml  tauri.conf.json
multiwebview/src-tauri/src/: lib.rs  main.rs
rust-att-leptos/: Cargo.toml
rust-att-leptos/src-tauri/: Cargo.toml  tauri.conf.json
rust-att-leptos/src-tauri/src/: main.rs
tauri-egui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-egui/src-tauri/src/: main.rs
tauri-sidecar/: package-lock.json  package.json
tauri-sidecar/src/: app.jsx
tauri-sidecar/src-tauri/: Cargo.toml  tauri.conf.json
tauri-sidecar/src-tauri/src/: main.rs
tray-app/: README.md  package-lock.json  package.json
tray-app/src/: App.jsx  main.jsx
tray-app/src-tauri/: Cargo.toml  tauri.conf.json
tray-app/src-tauri/src/: main.rs
verso-runtime/: package-lock.json  package.json
verso-runtime/src/: App.tsx
verso-runtime/src-tauri/: Cargo.toml  tauri.conf.json
verso-runtime/src-tauri/capabilities/: default.json
verso-runtime/src-tauri/src/: lib.rs  main.rs
windows-vibing/: package-lock.json  package.json
windows-vibing/src/: index.css
windows-vibing/src-tauri/: Cargo.toml  tauri.conf.json
windows-vibing/src-tauri/src/: main.rs
