[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "tauri-egui"
repository = ""
rust-version = "1.57"
version = "0.0.0"

[build-dependencies]
tauri-build = {version = "1.1", features = [] }

[dependencies]
tauri = { version = "1.1", features = ["api-all"] }
tauri-egui = "0.1"

[dev-dependencies]
tauri-cli = "1.1"
