[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2.0.0-alpha", path="../../../../tauri-apps/tauri/core/tauri-build", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.10"
tauri = {version = "2.0.0-alpha", path="../../../../tauri-apps/tauri/core/tauri", features = ["tray-icon", "icon-png"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
